Fix double scroll bar issue

--- a/content/styles/website.css
+++ b/content/styles/website.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: hidden
+}
+
 .gitbook-link {
     display: none !important;
 }
